# Ledger-Logic

./: AddWindow.cpp  AddWindow.h  AddWindow.ui  CMakeLists.txt  CMakeLists.txt.user.2264f6c  CMakeLists.txt.user.a4f92b6.xml  CMakeLists.txt.user.c9cabfc.xml  CreateBill.cpp  CreateBill.h  CreateBill.ui  CreateJournal.cpp  CreateJournal.h  CreateJournal.ui  FunctionsDefinition.h  ReadSupplierPayment.cpp  ReadSupplierPayment.h  ReadSupplierPayment.ui  Resources.qrc  accountactivity.cpp  accountactivity.h  accountactivity.ui  balancesheet.cpp  balancesheet.h  balancesheet.ui  chartofaccountwindow.cpp  chartofaccountwindow.h  chartofaccountwindow.ui  create1.cpp  create1.h  create1.ui  editwindow.cpp  editwindow.h  editwindow.ui  invoicebillfunctions.cpp  invoicebillfunctions.h  ledgersummary.cpp  ledgersummary.h  ledgersummary.ui  main.cpp  mainwindow.cpp  (+11 more)
database/: AccountingDetails.db
